# website-backend

./: Cargo.toml  build.sh
json/games/: game_list.json
json/games/data/: one.json
json_templates/: game_list.json  game_list.rs
json_templates/data/: game.rs
src/: games.rs  main.rs
src/games/: api.rs  game.rs  game_list.rs  mod.rs
